CMAKE_MINIMUM_REQUIRED (VERSION 2.8.12)
PROJECT (pam_rhostfilter_module C)

#
# For finding packages:
#
INCLUDE(CheckIncludeFiles)
INCLUDE(FindPackageHandleStandardArgs)

OPTION(SHOULD_USE_IPV4_ONLY "Include only IPv4 checks" FALSE)

FIND_PATH(PAM_INCLUDE_DIR security/pam_modules.h)
IF (PAM_INCLUDE_DIR)
    SET(SHOULD_BUILD_PAM_MODULE TRUE)
    INCLUDE_DIRECTORIES(${PAM_INCLUDE_DIR})
ENDIF (PAM_INCLUDE_DIR)
FIND_PATH(PAM_MODUTIL_INCLUDE_DIR security/pam_modutil.h)
IF (PAM_MODUTIL_INCLUDE_DIR)
    IF (NOT ${PAM_MODUTIL_INCLUDE_DIR} STREQUAL ${PAM_INCLUDE_DIR})
        INCLUDE_DIRECTORIES(${PAM_MODUTIL_INCLUDE_DIR})
    ENDIF (NOT ${PAM_MODUTIL_INCLUDE_DIR} STREQUAL ${PAM_INCLUDE_DIR})
    ADD_DEFINITIONS(-DHAVE_PAM_MODUTIL)
ENDIF (PAM_MODUTIL_INCLUDE_DIR)
FIND_PATH(PAM_EXT_INCLUDE_DIR security/pam_ext.h)
IF (PAM_EXT_INCLUDE_DIR)
    IF (NOT ${PAM_EXT_INCLUDE_DIR} STREQUAL ${PAM_INCLUDE_DIR})
        INCLUDE_DIRECTORIES(${PAM_EXTL_INCLUDE_DIR})
    ENDIF (NOT ${PAM_EXT_INCLUDE_DIR} STREQUAL ${PAM_INCLUDE_DIR})
    ADD_DEFINITIONS(-DHAVE_PAM_EXT)
ENDIF (PAM_EXT_INCLUDE_DIR)

IF (SHOULD_USE_IPV4_ONLY)
    ADD_DEFINITIONS(-DPAM_BYHOST_IPV4_ONLY)
ENDIF (SHOULD_USE_IPV4_ONLY)

IF (APPLE)
    ADD_DEFINITIONS(-DPAM_BYHOST_IS_MACOSX)
ENDIF (APPLE)

# Config file validator:
ADD_EXECUTABLE(pam_rhostfilter_check pam_rhostfilter.c)

# PAM module:
IF (SHOULD_BUILD_PAM_MODULE)
    ADD_LIBRARY(pam_rhostfilter SHARED pam_rhostfilter.c)
    SET_TARGET_PROPERTIES(pam_rhostfilter PROPERTIES PREFIX "")
    TARGET_COMPILE_DEFINITIONS(pam_rhostfilter PUBLIC PAM_BYHOST_MODULE)
    TARGET_LINK_LIBRARIES(pam_rhostfilter PUBLIC pam)
ENDIF (SHOULD_BUILD_PAM_MODULE)

